--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="lt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G Spot Barbershop | Vilnius — Sertifikuota plaukų stilistė</title>
-    <meta name="description" content="G Spot Barbershop Vilniuje. Profesionalūs vyrų plaukų kirpimai, barzdos modeliavimas. Registruokitės online!">
+    <meta name="description"
+        content="G Spot Barbershop Vilniuje. Profesionalūs vyrų plaukų kirpimai, barzdos modeliavimas. Registruokitės online!">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
@@ -51,7 +56,7 @@
                 <a href="#booking" class="btn btn-primary">
                     <span>Registruotis</span>
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M5 12h14M12 5l7 7-7 7"/>
+                        <path d="M5 12h14M12 5l7 7-7 7" />
                     </svg>
                 </a>
                 <a href="#services" class="btn btn-outline">Paslaugos & Kainos</a>
@@ -85,12 +90,13 @@
             <div class="section-header">
                 <span class="section-tag">Apie mus</span>
                 <h2 class="section-title">Profesionalus <span class="text-gradient">stilius</span> kiekvienam</h2>
-                <p class="section-desc">Sertifikuota plaukų stilistė su ilgamete patirtimi, siūlanti aukščiausios kokybės vyrų kirpimo ir barzdos paslaugas Vilniuje.</p>
+                <p class="section-desc">Sertifikuota plaukų stilistė su ilgamete patirtimi, siūlanti aukščiausios
+                    kokybės vyrų kirpimo ir barzdos paslaugas Vilniuje.</p>
             </div>
             <div class="about-grid">
                 <div class="about-card">
                     <div class="about-card-icon">💈</div>
-                    <h3>Sertifikuota meistė</h3>
+                    <h3>Sertifikuota meistrė</h3>
                     <p>Profesionali plaukų stilistė su sertifikatu ir nuolat tobulinama kvalifikacija.</p>
                 </div>
                 <div class="about-card">
@@ -220,12 +226,14 @@
                     </div>
                     <div class="form-group">
                         <label for="bookingMessage">Papildoma informacija</label>
-                        <textarea id="bookingMessage" name="message" rows="3" placeholder="Jūsų pageidavimai (nebūtina)"></textarea>
+                        <textarea id="bookingMessage" name="message" rows="3"
+                            placeholder="Jūsų pageidavimai (nebūtina)"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-full" id="bookingSubmit">
                         <span>Registruotis</span>
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M5 12h14M12 5l7 7-7 7"/>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <path d="M5 12h14M12 5l7 7-7 7" />
                         </svg>
                     </button>
                 </form>
@@ -259,7 +267,8 @@
                 <div class="footer-brand">
                     <span class="logo-icon">✂</span>
                     <span class="logo-text">G SPOT<span class="logo-accent"> BARBERSHOP</span></span>
-                    <p class="footer-desc">Sertifikuota plaukų stilistė Vilniuje. Modeliniai vyrų kirpimai ir barzdos.</p>
+                    <p class="footer-desc">Sertifikuota plaukų stilistė Vilniuje. Modeliniai vyrų kirpimai ir barzdos.
+                    </p>
                 </div>
                 <div class="footer-links">
                     <h4>Navigacija</h4>
@@ -273,7 +282,8 @@
                     <h4>Sekite mus</h4>
                     <a href="https://instagram.com/barbie___barber" target="_blank" class="social-link">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
+                            <path
+                                d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z" />
                         </svg>
                         @barbie___barber
                     </a>
@@ -295,4 +305,5 @@
 
     <script src="/js/main.js"></script>
 </body>
+
 </html>
